--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=r9Xk0IS8riNf71jCngCOnxd1gZhrxo9U
 
 DB_HOST=localhost
-DB_DATABASE=testing
+DB_DATABASE=owasp_riskrating
 DB_USERNAME=root
-DB_PASSWORD=2w3e4r5t-LKJ`+
+DB_PASSWORD=password
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
