initial development of the resource page

--- a/gui/angular.json
+++ b/gui/angular.json
@@ -19,11 +19,10 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/owaspFAV.png",
               "src/assets"
             ],
             "styles": [
-
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               {
