--- a/gui/package.json
+++ b/gui/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
+    "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.3.7",
@@ -27,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^4.1.1",
+    "ngx-embed-video": "^1.0.4",
     "rxjs": "~6.3.3",
     "tether": "^1.4.6",
     "zone.js": "~0.8.26"
