--- a/gui/package.json
+++ b/gui/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~7.0.0",
     "angular-chart.js": "^1.1.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
