--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
+sudo: false
 node_js:
-  - "8.9"
-before_install:
-   - "cd gui"
+  - 10
+  - 9
+  - 8
+  - 7
+  - 6
 install:
-  - npm install
-  
-
+  - cd gui && npm install && cd ..
+script:
+  - cd gui && npm test
