--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
 script:
 - (cd gui && ng lint)
 - (cd gui && ng test --watch=false)
-- (cd gui && ng serve &)
+- (cd gui && npm start &)
 
