--- a/gui/package.json
+++ b/gui/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular-bootstrap-md": "^7.5.4",
     "angular-chart.js": "^1.1.1",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
