--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^3.2.7",
     "mongodb-memory-server": "^5.1.5",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "unzip": "^0.1.11"
   }
 }
