--- a/api/package.json
+++ b/api/package.json
@@ -17,14 +17,17 @@
   },
   "homepage": "https://github.com/azharanees/RiskAssessmentFramework#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "form-data": "^2.5.0",
     "helmet": "^3.18.0",
     "mongodb": "^3.2.7",
     "mongodb-memory-server": "^5.1.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "node-fetch": "^2.6.0",
     "unzip": "^0.1.11"
   }
 }
