--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-fetch": "^2.6.0",
+    "underscore": "^1.9.1",
     "unzip": "^0.1.11"
   }
 }
