--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "Risk Assessment Framework REST API",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,13 +19,16 @@
   "homepage": "https://github.com/azharanees/RiskAssessmentFramework#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "form-data": "^2.5.0",
     "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7",
     "mongodb-memory-server": "^5.1.5",
+    "mongoose": "^5.6.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-fetch": "^2.6.0",
