--- a/api/package.json
+++ b/api/package.json
@@ -34,5 +34,8 @@
     "node-fetch": "^2.6.0",
     "underscore": "^1.9.1",
     "unzip": "^0.1.11"
+  },
+  "devDependencies": {
+    "eslint-plugin-security": "^1.4.0"
   }
 }
