--- a/api/package.json
+++ b/api/package.json
@@ -33,7 +33,7 @@
     "multer": "^1.4.1",
     "node-fetch": "^2.6.0",
     "underscore": "^1.9.1",
-    "unzip": "^0.1.11"
+    "unzipper": "^0.10.3"
   },
   "devDependencies": {
     "eslint-plugin-security": "^1.4.0"
